--- a/src/ocvp.ipynb
+++ b/src/ocvp.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1303,20 +1303,9 @@
        "338219520"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
     }
    ],
    "source": [
@@ -1405,13 +1394,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "from model.holistic_predictor import HolisticTransformerPredictor\n",
     "from model.oc_predictor import ObjectCentricTransformerPredictor\n",
-    "from model.predictor_wrapper import PredictorWrapper\n"
+    "from model.predictor_wrapper import PredictorWrapper\n",
+    "from model.ocvp import TransformerPredictor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input images shape: torch.Size([32, 24, 3, 128, 128])\n",
+      "Image patches shape: torch.Size([32, 24, 64, 768])\n",
+      "Image tokens shape after projection: torch.Size([32, 24, 64, 512])\n",
+      "Image tokens shape after positional encoding: torch.Size([32, 24, 64, 512])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "holistic_encoder = HolisticEncoder(mode='training')\n",
+    "holistic_predictor = HolisticTransformerPredictor()\n",
+    "\n",
+    "encoded_features = holistic_encoder(rgbs, masks, coords)\n",
+    "predictor = PredictorWrapper(holistic_predictor)\n",
+    "count_model_params(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "target shape: True\n",
+      "cur_pred shape: torch.Size([32, 11, 512])\n",
+      "target shape: torch.Size([32, 5, 11, 512])\n",
+      "predictor_input shape: torch.Size([32, 5, 11, 512])\n",
+      "target shape: True\n",
+      "cur_pred shape: torch.Size([32, 11, 512])\n",
+      "target shape: torch.Size([32, 5, 11, 512])\n",
+      "predictor_input shape: torch.Size([32, 5, 11, 512])\n",
+      "target shape: True\n",
+      "cur_pred shape: torch.Size([32, 11, 512])\n",
+      "target shape: torch.Size([32, 5, 11, 512])\n",
+      "predictor_input shape: torch.Size([32, 5, 11, 512])\n",
+      "target shape: True\n",
+      "cur_pred shape: torch.Size([32, 11, 512])\n",
+      "target shape: torch.Size([32, 5, 11, 512])\n",
+      "predictor_input shape: torch.Size([32, 5, 11, 512])\n",
+      "target shape: True\n",
+      "cur_pred shape: torch.Size([32, 11, 512])\n",
+      "target shape: torch.Size([32, 5, 11, 512])\n",
+      "predictor_input shape: torch.Size([32, 5, 11, 512])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([32, 5, 11, 512])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds, loss = predictor(encoded_features)\n",
+    "preds.shape"
    ]
   },
   {
@@ -1419,12 +1492,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "oc_predictor = ObjectCentricTransformerPredictor()\n",
-    "holistic_predictor = HolisticTransformerPredictor()\n",
-    "predictor_wrapper = PredictorWrapper(oc_predictor, holistic_predictor)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
